2003-04-24  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (bacon_video_widget_realize),
	(bacon_video_widget_unrealize),
	(bacon_video_widget_set_fullscreen):
	* src/scrsaver.c: (fake_event), (scrsaver_new), (scrsaver_disable),
	(scrsaver_enable), (scrsaver_free):
	* src/scrsaver.h:
	* src/totem-preferences.c: (on_checkbutton2_toggled),
	(on_button1_clicked):
	* src/totem-private.h:
	* src/totem.c: (totem_action_error), (totem_action_play),
	(totem_action_play_media), (totem_action_set_mrl),
	(totem_action_seek_relative), (on_open_location1_activate),
	(on_eject1_activate), (on_take_screenshot1_activate),
	(on_properties1_activate), (commit_hide_skip_to),
	(on_video_motion_notify_event):
	* src/totem.h: remove usage of a bunch of static variables, transform
	the screensaver into an "object", and some cleanups

2003-04-24  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_exit): don't crash on exit if the totem is
	NULL (early start)

2003-04-24  Bastien Nocera  <hadess@hadess.net>

	* src/totem-preferences.c: (totem_display_is_local),
	(ask_show_visuals), (on_checkbutton2_toggled),
	(totem_setup_preferences): take into account the result from the
	"enable visuals" dialog (Really Closes: #110851)

2003-04-24  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (main): forgot a space in the string (Closes: #111459)

2003-04-23  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (configure_cb): add borders from
	the widget itself
	* src/totem.c: (main): fix a bug with quotes (Closes: #111459)

2003-04-23  Bastien Nocera  <hadess@hadess.net>

	* src/totem-preferences.c: (ask_show_visuals),
	(on_checkbutton2_toggled), (totem_setup_preferences):
	* src/totem.c: (totem_action_error_and_exit), (main): ask the user if he
	really wants visual effects when running on a non-local display
	(Closes: #110851), really display the error messages when we have
	errors on startup
